# skyblock-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
examples/bazaar-list/: Cargo.toml  Dockerfile  README.md
examples/bazaar-list/src/: main.rs
examples/index/: Cargo.toml  Dockerfile  README.md
examples/index-ah/: .gitignore  Cargo.toml  LICENSE
examples/index/src/: main.rs
src/: client.rs  http.rs  lib.rs  objects.rs
src/methods/: auction.rs  bazaar.rs  mod.rs
src/objects/: auction.rs  bazaar.rs  items.rs  nbt.rs  profile.rs
src/tests/: deserialize.rs  mod.rs
src/tests/deserialize/: api_error.json  auction.json  auction_body.json  auctions_body.json  bid.json  bids.json  claim.json  item.json  searched_auctions.json
src/tests/deserialize/auction/: auction.json  auction_body.json  auctions_body.json  bid.json  bids.json  claim.json  searched_auctions.json
src/tests/deserialize/item/: item.json  maxed_aotd.json
src/tests/http/: keypool.rs  mod.rs
