[package]
name = "skyblock-rs"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0"
serde_derive="1.0"
serde_json="1.0"

[dependencies.base64]
version="0.12"
optional=true

[dependencies.futures]
version="0.3"
optional=true

[dependencies.hyper]
version="0.13"
optional=true

[dependencies.hyper-tls]
version="0.4"
optional=true

[dependencies.hematite-nbt]
version="0.4"
optional=true

[features]
default=["client"]
client=["futures", "hyper", "hyper-tls"]
nbt=["hematite-nbt", "bytes"]
bytes=["base64"]