[package]
name = "skyblock-rs"
version = "0.2.4"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A simple library to interact with Hypixel's Skyblock API."
keywords = ["hypixel", "skyblock", "async"]
categories = ["api-bindings"]
exclude = ["env.sh", "docker-compose.yml"]

[dependencies]
serde="1.0"
serde_derive="1.0"

[dependencies.serde_json]
version="1.0"
optional=true

[dependencies.base64]
version="0.12"
optional=true

[dependencies.futures]
version="0.3"
optional=true

[dependencies.hyper]
version="0.13"
optional=true

[dependencies.hyper-tls]
version="0.4"
optional=true

[dependencies.hematite-nbt]
version="0.4"
optional=true

[features]
default=["client"]
client=["futures", "hyper", "hyper-tls", "serde_json"]
nbt=["hematite-nbt", "bytes"]
bytes=["base64"]
