[package]
name = "bazaar-list"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.skyblock-rs]
path="../.."

[dependencies]
serde_json="*"
tokio = { version = "0.2", features = ["full"] }
